# CentrovisionTauri

./: .env  .env.example  .gitignore  DIAGNOSTICO_PIPELINES.md  ESQUEMA_COMPLETO_2026-01-18.sql  EsquemaCompleto_BDCentrovision.sql  Esquematablasmasreciente.sql  GUIA_MIGRACION_COMPLETA.md  IMPLEMENTACION_CONEXION_DUAL.md  INSTRUCCIONES_MIGRACION.md  MCP_SUPABASE_CONFIG.md  MIGRACION_CONSOLIDADA.sql  PLAN_SERVIDOR_LOCAL.md  README.md  SERVICIO_SYNC_ESPECIFICACION.md  SERVIDOR_LOCAL_SETUP.md  TAURI_SETUP.md  add_updated_at_for_sync.sql  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json
.github/workflows/: build.yml
edge_functions_2026-01-16/: README.txt  config.toml
scripts/: setup-server.sh
sql/: file_sync_log.sql  fix_foreign_keys.sql  realtime_triggers.sql  sync_status.sql  v1.1.2_inventory_and_crm_updates.sql
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  config.rs  connection_manager.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs  schema.sql
src-tauri/src/postgres/: mod.rs
src-tauri/src/realtime/: mod.rs
src-tauri/src/sync/: mod.rs
src/components/: BranchSelector.tsx  MobileSidebarSheet.tsx  ProtectedRoute.tsx  SyncIndicator.tsx  ThemeToggle.tsx  UpdateChecker.tsx  VoiceDictationFAB.tsx
src/hooks/: useAppSettings.tsx  useAuth.tsx  useBranch.tsx  useCRMNotifications.tsx  useCRMPipelines.tsx  useCRMProcedureTypes.tsx  useClinicalOptions.tsx  useConfetti.tsx  useNetworkStatus.tsx  usePrintPDF.tsx  useVoiceDictation.tsx
src/lib/: axisValidation.ts  crmStages.ts  dataSource.ts  fkMapping.ts  imageCompression.ts  lensUtils.ts  localStorageHelper.ts  printTemplates.ts  timezone.ts  utils.ts
supabase/: config.toml
(+240 files in other folders)
