[package]
name = "centrovision-ehr"
version = "1.1.0"
description = "CentroVision EHR - Sistema de Historia Clínica Electrónica"
authors = ["CentroVision"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "centrovision_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
stt = ["tauri-plugin-stt"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP client for Supabase sync
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# PostgreSQL client for local server
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
postgres-types = { version = "0.2", features = ["derive"] }

# Configuration
toml = "0.8"
dirs = "5.0"

# Logging
log = "0.4"

# Error handling
thiserror = "1"
anyhow = "1"

# STT plugin only on macOS (requires Vosk native library)
# Enable with: cargo build --features stt
[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-stt = { version = "0.1", optional = true }
